# kepler.gl

./: .dockerignore  .gitignore
examples/q-map/: .dockerignore  AGENT.md  (+22 more)
examples/q-map/backends/q-assistant/: Dockerfile  README.md  pyproject.toml
examples/q-map/backends/q-assistant/src/q_assistant/: agent_chain.py  audit_logging.py  chat_payload_compaction.py  chat_request_coercion.py  chat_response_normalization.py  cloud_provider.py  config.py  main.py  message_text.py  models.py  objective_anchor.py  objective_focus.py  objective_intent.py  ollama_urls.py  openai_chat_payload.py  openai_tool_schema.py  payload_compaction.py  provider_retry.py  provider_transport.py  qmap-tool-contracts.json  qmap_context.py  request_coercion.py  request_markers.py  request_routing.py  request_tool_results.py  response_claims.py  runtime_guardrail_candidate_rules.py  runtime_guardrails.py  runtime_loop_limit_rules.py  runtime_workflow_state.py  tool_calls.py  tool_contracts.py  tool_result_parsing.py  usage_estimation.py
examples/q-map/backends/q-assistant/src/q_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/q-map/backends/q-assistant/tests/: runtime_guardrails_injection_boundary_clip_coverage_mixin.py  runtime_guardrails_injection_fit_focus_mixin.py  runtime_guardrails_injection_metric_recovery_mixin.py  runtime_guardrails_injection_post_create_mixin.py  runtime_guardrails_injection_ranking_evidence_mixin.py  runtime_guardrails_loop_limits_recovery_mixin.py  runtime_guardrails_loop_limits_routing_mixin.py  runtime_guardrails_loop_limits_wait_tooltip_mixin.py  runtime_guardrails_post_filter_force_fit_mixin.py  runtime_guardrails_test_support.py  test_agent_skip_policy.py  test_chat_audit_utils.py  test_chat_payload_compaction.py  test_explicit_tool_routing.py  test_objective_anchor.py  test_openai_stream_normalization.py  test_openrouter_provider.py  test_request_coercion.py  test_runtime_guardrails.py  test_token_budget_compaction.py
examples/q-map/backends/q-backends-shared/: pyproject.toml
examples/q-map/backends/q-backends-shared/src/q_backends_shared/: __init__.py  config_utils.py  jwt_auth.py
examples/q-map/backends/q-cumber-backend/: .env.example  Dockerfile  PROVIDER_ONBOARDING.md  README.md  pyproject.toml
examples/q-map/backends/q-cumber-backend/data/reference/: clc_code_18_labels.json
examples/q-map/backends/q-cumber-backend/etl/: opas_db_export.sh  opas_ddl.sql  opas_sync.py
examples/q-map/backends/q-cumber-backend/provider-descriptors/it/: ispra-opas.json  local-assets-it.json  natura2000-it.json
examples/q-map/backends/q-cumber-backend/src/q_cumber_backend/: __init__.py  config.py  dataset_adapters.py  main.py  models.py  provider_registry.py  storage.py
examples/q-map/backends/q-cumber-backend/tests/: test_api_routing_metadata.py  test_dataset_adapters.py  test_jwt_auth.py  test_provider_registry_and_storage.py
examples/q-map/backends/q-storage-backend/: .env.example  Dockerfile  README.md  pyproject.toml
examples/q-map/backends/q-storage-backend/tests/: test_config_and_storage.py  test_jwt_auth.py
(+328 files in other folders)
