[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q-assistant"
version = "0.1.0"
description = "FastAPI proxy backend for q-map AI assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "kepler.gl contributors"}
]
dependencies = [
  "q-backends-shared",
  "fastapi>=0.116.0",
  "fastapi-mcp>=0.3.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.10.0",
  "httpx>=0.28.0",
  "openai>=1.51.0"
]

[project.scripts]
q-assistant = "q_assistant.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
q_assistant = ["qmap-tool-contracts.json"]
