[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q-backends-shared"
version = "0.1.0"
description = "Shared utilities for q-map Python backends"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "kepler.gl contributors"}
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
