[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qmap-qcumber-cloud"
version = "0.1.0"
description = "FastAPI backend for kepler.gl q-map Q-cumber cloud provider"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "kepler.gl contributors"}
]
dependencies = [
  "q-backends-shared",
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.10.0",
  "psycopg[binary]>=3.2.0",
  "psycopg-pool>=3.2.0",
  "httpx>=0.28.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0"
]

[project.scripts]
qmap-qcumber-cloud = "q_cumber_backend.main:run"
qcumber-opas-sync = "etl.opas_sync:main"

[tool.setuptools]
package-dir = {"q_cumber_backend" = "src/q_cumber_backend", "etl" = "etl"}

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["q_cumber_backend*", "etl*"]
