[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qmap-qstorage-cloud"
version = "0.1.0"
description = "FastAPI backend for kepler.gl q-map Q-storage cloud provider"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "kepler.gl contributors"}
]
dependencies = [
  "q-backends-shared",
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.10.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0"
]

[project.scripts]
qmap-qstorage-cloud = "q_storage_backend.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
